--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "author": "BJV Tech Solutions",
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^29.5.11",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "yup": "^1.3.3"
   },
   "scripts": {
-    "dev": "ts-node-dev ./src/index.ts"
+    "dev": "ts-node-dev ./src/index.ts",
+    "jest": "jest --init",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
