--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
+    "yarn": "^1.22.21",
     "yup": "^1.3.3"
   },
   "scripts": {
@@ -21,6 +22,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/supertest": "^6.0.2",
+    "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
