--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
+    "knex": "^3.1.0",
     "ts-jest": "^29.1.1",
     "yarn": "^1.22.21",
     "yup": "^1.3.3"
   },
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
-    "jest": "jest --init",
+    "preproduction": "tsc",
+    "production": "node ./build/index.js",
     "test": "jest"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/supertest": "^6.0.2",
+    "sqlite": "^5.1.1",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
