--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "dev": "ts-node-dev ./src/index.ts",
     "postinstall": "tsc",
     "production": "node ./build/index.js",
-    "test": "jest"
+    "test": "jest",
+    "knex:seed": "knex --knexfile ./src/server/database/knex/types/Enviroment.ts seed:run",
+    "knex:migrate": "knex --knexfile ./src/server/database/knex/types/Enviroment.ts migrate:latest",
+    "knex:rollback": "knex --knexfile ./src/server/database/knex/types/Enviroment.ts migrate:rollback",
+    "knex:rollback-all": "knex --knexfile ./src/server/database/knex/types/Enviroment.ts migrate:rollback --all"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/supertest": "^6.0.2",
-    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
