--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postinstall": "tsc",
     "production": "node ./build/index.js",
     "test": "jest",
+    "vercel-build": "npx knex --knexfile ./src/server/database/knex/types/Enviroment.ts migrate:latest",
     "knex:seed": "knex --knexfile ./src/server/database/knex/types/Enviroment.ts seed:run",
     "knex:migrate": "knex --knexfile ./src/server/database/knex/types/Enviroment.ts migrate:latest",
     "knex:rollback": "knex --knexfile ./src/server/database/knex/types/Enviroment.ts migrate:rollback",
