--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
     "knex": "^3.1.0",
+    "pg": "^8.11.3",
     "ts-jest": "^29.1.1",
     "yarn": "^1.22.21",
     "yup": "^1.3.3"
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/pg": "^8.10.9",
     "@types/supertest": "^6.0.2",
     "sqlite3": "^5.1.7",
     "supertest": "^6.3.3",
