--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "BJV Tech Solutions",
   "license": "MIT",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.11",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
