--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.5",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.11.3",
     "ts-jest": "^29.1.1",
