--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -17,6 +18,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "nodemailer": "^6.9.8",
     "pg": "^8.11.3",
     "ts-jest": "^29.1.1",
     "yarn": "^1.22.21",
